--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.7.2",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6"
   },
@@ -20,6 +21,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "vue-cli-plugin-buefy": "^0.3.4",
     "vue-template-compiler": "^2.5.21"
   }
 }
