--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "buefy": "^0.7.2",
+    "lodash-es": "^4.17.11",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6"
   },
