--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "buefy": "^0.7.2",
     "lodash-es": "^4.17.11",
     "register-service-worker": "^1.5.2",
-    "vue": "^2.6.6"
+    "vue": "^2.6.6",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
