--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "test:covarage": "vue-cli-service test:unit --collectCoverage"
   },
   "dependencies": {
-    "buefy": "^0.7.2",
+    "buefy": "^0.7.7",
     "downloadjs": "^1.4.7",
-    "html2canvas": "^1.0.0-alpha.12",
+    "html2canvas": "^1.0.0-rc.3",
     "lodash-es": "^4.17.11",
     "register-service-worker": "^1.5.2",
     "visibilityjs": "^2.0.2",
     "vue": "^2.6.10",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
