💄 change theme_color

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,5 +16,5 @@
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#222224",
-  "theme_color": "#ee1515"
+  "theme_color": "#ffffff"
 }
