--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "buefy": "^0.7.7",
     "downloadjs": "^1.4.7",
+    "geopattern": "^1.2.3",
     "html2canvas": "^1.0.0-rc.3",
     "lodash-es": "^4.17.11",
     "register-service-worker": "^1.5.2",
