--- a/package.json
+++ b/package.json
@@ -10,29 +10,30 @@
     "test:covarage": "vue-cli-service test:unit --collectCoverage"
   },
   "dependencies": {
-    "buefy": "^0.7.7",
+    "buefy": "^0.7.10",
     "downloadjs": "^1.4.7",
     "geopattern": "^1.2.3",
     "html2canvas": "^1.0.0-rc.3",
-    "lodash-es": "^4.17.11",
+    "lodash-es": "^4.17.15",
     "register-service-worker": "^1.5.2",
     "visibilityjs": "^2.0.2",
     "vue": "^2.6.10",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-plugin-pwa": "^3.8.0",
-    "@vue/cli-plugin-unit-jest": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-plugin-eslint": "^3.9.2",
+    "@vue/cli-plugin-pwa": "^3.9.0",
+    "@vue/cli-plugin-unit-jest": "^3.9.0",
+    "@vue/cli-service": "^3.9.3",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^6.0.1",
+    "eslint-plugin-import": "^2.18.1",
+    "eslint-plugin-vue": "^5.2.3",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.0.1",
     "vue-cli-plugin-buefy": "^0.3.6",
